RESOLVED FIXED126699
Regression: failing RegExp tests on 32 bit architectures.
https://bugs.webkit.org/show_bug.cgi?id=126699
Summary Regression: failing RegExp tests on 32 bit architectures.
Balazs Kilvady
Reported 2014-01-09 08:01:24 PST
setRegExpConstructorInput and setRegExpConstructorMultiline functions are defined with (ExecState*, JSObject*, JSValue) parameters but are called with (ExecState*, EncodedJSValue, EncodedJSValue) parameters: (gdb) p entry->m_u.property.put $6 = (JSC::PutFunction) 0x7791feac <JSC::setRegExpConstructorMultiline(JSC::ExecState*, JSC::JSObject*, JSC::JSValue)> (gdb) ptype entry->m_u.property.put type = void (*)(JSC::ExecState *, JSC::EncodedJSValue, JSC::EncodedJSValue)
Attachments
proposed patch. (2.65 KB, patch)
2014-01-09 08:11 PST, Balazs Kilvady
no flags
Balazs Kilvady
Comment 1 2014-01-09 08:11:26 PST
Created attachment 220737 [details] proposed patch.
Oliver Hunt
Comment 2 2014-01-09 10:29:20 PST
Comment on attachment 220737 [details] proposed patch. whoops, sorry
WebKit Commit Bot
Comment 3 2014-01-09 10:42:24 PST
Comment on attachment 220737 [details] proposed patch. Clearing flags on attachment: 220737 Committed r161562: <http://trac.webkit.org/changeset/161562>
WebKit Commit Bot
Comment 4 2014-01-09 10:42:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.