Regression: failing RegExp tests on 32 bit architectures. https://bugs.webkit.org/show_bug.cgi?id=126699

Patch by Balazs Kilvady <kilvadyb@homejinni.com> on 2014-01-09
Reviewed by Michael Saboff.

Fix setRegExpConstructor functions for 32 bit architectures.

* runtime/RegExpConstructor.cpp:
(JSC::setRegExpConstructorInput):
(JSC::setRegExpConstructorMultiline):

Canonical link: https://commits.webkit.org/144584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161562 268f45cc-cd09-0410-ab3c-d52691b4dbfc